--- a/ui/angular/modules/employee/views/attendance.html
+++ b/ui/angular/modules/employee/views/attendance.html
@@ -1,13 +1,13 @@
 <div class="row">
   <div class="col-sm-8 panel panel-default md-whiteframe-z1"">
-      <ul class="nav nav-lines nav-tabs b-accent">
-        <li class="active panel b-t-2x ">
+      <ul class="nav  nav-tabs">
+        <li class="active bg-info ">
           <a href data-toggle="tab" data-target="#tab1">Employee</a>
         </li>
-        <li class=" panel  b-t-2x ">
+        <li class="bg-info ">
           <a href data-toggle="tab" data-target="#tab2">Labour</a>
         </li>
-        <li class=" panel  b-t-2x ">
+        <li class="bg-info ">
           <a href data-toggle="tab" data-target="#tab3">Vehicle</a>
         </li>
       </ul>
@@ -19,21 +19,22 @@
                 <span class="font-bold">Employee Attendance</span>
               </div>
               <div class="panel-body">
-                <div class="md-form-group  col-sm-12">
-                   <div ng-controller="DatepickerDemoCtrl" class="m-b-lg">
-                     <div class="md-input-group">
-                        <input type="text" class="md-input" datepicker-popup="{{format}}" ng-model="dt|date:'MMM-dd-yyyy'" is-open="opened" min-date="minDate" max-date="'2015-06-22'" datepicker-options="dateOptions" ng-required="true" close-text="Close" />
-                      <button type="button" class="btn btn-default" ng-click="open($event)" style="margin-left: 270px;margin-top: -70px"><i class="glyphicon glyphicon-calendar"></i></button>
-                    </div>
-                  </div>
-                </div>
-                <div class="md-form-group  col-sm-6">
+                <div class="md-form-group col-sm-6">
+              <label>Date:</label>
+                <md-input-container md-is-error="myForm.name.$invalid && (myForm.$submitted || myForm.name.$dirty)">
+                  <div ng-controller="DatepickerDemoCtrl">
+                    <input type="text" class="md-input" datepicker-popup="{{format}}" ng-model="Date" is-open="opened"  datepicker-options="dateOptions" ng-required="true"  />
+                    <button type="button" class="btn btn-default" ng-click="open($event)" style="margin-top: -60px;margin-left: 90px;"><i class="glyphicon glyphicon-calendar"></i></button>
+                 </div>
+                </md-input-container> 
+              </div>
+                <div class="md-form-group col-sm-12">
                   <label>In:</label>
                     <div ng-controller="TimepickerDemoCtrl" class="m-b-lg">
                        <timepicker ng-model="mytime" ng-change="changed()" hour-step="hstep" minute-step="mstep" show-meridian="ismeridian"></timepicker>
                     </div>
                 </div>
-                <div class="md-form-group  col-sm-6">
+                <div class="md-form-group col-sm-12">
                   <label>Out:</label>
                     <div ng-controller="TimepickerDemoCtrl" class="m-b-sm">
                       <timepicker ng-model="mytime" ng-change="changed()" hour-step="hstep" minute-step="mstep" show-meridian="ismeridian"></timepicker>
@@ -81,13 +82,15 @@
                     </md-not-found>
                 </md-autocomplete>
               </div>
-              <div class="md-form-group  col-sm-12">
-                <div ng-controller="DatepickerDemoCtrl" class="m-b-lg">
-                   <div class="md-input-group">
-                      <input type="text" class="md-input" datepicker-popup="{{format}}" ng-model="dt" is-open="opened" min-date="minDate" max-date="'2015-06-22'" datepicker-options="dateOptions" ng-required="true" close-text="Close" />
-                    <button type="button" class="btn btn-default" ng-click="open($event)" style="margin-left: 270px;margin-top: -70px"><i class="glyphicon glyphicon-calendar"></i></button>
-                  </div>
-                </div>
+             
+                <div class="md-form-group col-sm-12">
+              <label>Date:</label>
+                <md-input-container md-is-error="myForm.name.$invalid && (myForm.$submitted || myForm.name.$dirty)">
+                  <div ng-controller="DatepickerDemoCtrl">
+                    <input type="text" class="md-input col-sm-6" datepicker-popup="{{format}}" ng-model="Date" is-open="opened"  datepicker-options="dateOptions" ng-required="true"  />
+                    <button type="button" class="btn btn-default" ng-click="open($event)" style="margin-top: -60px;margin-left: 90px;"><i class="glyphicon glyphicon-calendar"></i></button>
+                 </div>
+                </md-input-container> 
               </div>
               <div class="md-form-group col-sm-6">
                 <md-input-container md-is-error="myForm.name.$invalid && (myForm.$submitted || myForm.name.$dirty)">
@@ -129,15 +132,18 @@
     </div>
 
          <div class="form-group" ng-show="show==2" >
-       <p> <div class="md-form-group  col-sm-12">
-                <div ng-controller="DatepickerDemoCtrl" class="m-b-lg">
-                   <div class="md-input-group">
-                      <input type="text" class="md-input" datepicker-popup="{{format}}" ng-model="dt" is-open="opened" min-date="minDate" max-date="'2015-06-22'" datepicker-options="dateOptions" ng-required="true" close-text="Close" />
-                    <button type="button" class="btn btn-default" ng-click="open($event)" style="margin-left: 270px;margin-top: -70px"><i class="glyphicon glyphicon-calendar"></i></button>
-                  </div>
-                </div>
+       <p>
+                 <div class="md-form-group col-sm-6">
+           
+                <md-input-container md-is-error="myForm.name.$invalid && (myForm.$submitted || myForm.name.$dirty)">
+                  <div ng-controller="DatepickerDemoCtrl">
+                    <input type="text" class="md-input" datepicker-popup="{{format}}" ng-model="Date" is-open="opened"  datepicker-options="dateOptions" ng-required="true"  />
+                    <button type="button" class="btn btn-default" ng-click="open($event)" style="margin-top: -60px;margin-left: 90px;"><i class="glyphicon glyphicon-calendar"></i></button>
+                 </div>
+                </md-input-container> 
               </div>
-       <div class="md-form-group">
+              
+       <div class="md-form-group col-sm-6">
                   <md-input-container md-is-error="myForm.name.$invalid && (myForm.$submitted || myForm.name.$dirty)">
                     <label>Square Feet</label>
                     <input type="text" class="md-input" ng-model="user.sqf" name="sqf" id="sqf" ng-required="true">
@@ -165,7 +171,7 @@
           <div class="panel">
               <div class="panel-heading bg-white text-center">
                 <span class="font-bold">Vehicle Attendance</span>
-              </div>
+              </div><hr>
              <div class="panel-body">
                 <div class="md-form-group col-sm-6">
                     <md-input-container md-is-error="myForm.name.$invalid && (myForm.$submitted || myForm.name.$dirty)" >
@@ -185,24 +191,27 @@
                         </div>
                     </md-input-container> 
                 </div>
-                <div class="md-form-group  col-sm-12">
-                <div ng-controller="DatepickerDemoCtrl" class="m-b-lg">
-                   <div class="md-input-group">
-                      <input type="text" class="md-input" datepicker-popup="{{format}}" ng-model="dt" is-open="opened" min-date="minDate" max-date="'2015-06-22'" datepicker-options="dateOptions" ng-required="true" close-text="Close" />
-                    <button type="button" class="btn btn-default" ng-click="open($event)" style="margin-left: 270px;margin-top: -70px"><i class="glyphicon glyphicon-calendar"></i></button>
-                  </div>
-                </div>
+                 <div class="md-form-group col-sm-6 ">
+              <label>Date:</label>
+                <md-input-container md-is-error="myForm.name.$invalid && (myForm.$submitted || myForm.name.$dirty)">
+                  <div ng-controller="DatepickerDemoCtrl">
+                    <input type="text" class="md-input" datepicker-popup="{{format}}" ng-model="Date" is-open="opened"  datepicker-options="dateOptions" ng-required="true"  />
+                    <button type="button" class="btn btn-default" ng-click="open($event)" style="margin-top: -60px;margin-left: 90px;"><i class="glyphicon glyphicon-calendar"></i></button>
+                 </div>
+                </md-input-container> 
               </div>
-                <div class="md-form-group  col-sm-12">
-                 <md-content>
-                    <label>Time:</label>
-                    <timepicker ng-model="mytime" ng-change="changed()" hour-step="hstep" minute-step="mstep" ></timepicker>
-                </md-content>
-            </div>
+               <div class="md-form-group col-sm-12">
+                  <label>Total Hours:</label>
+                    <div ng-controller="TimepickerDemoCtrl" class="m-b-sm">
+                      <timepicker ng-model="mytime" ng-change="changed()" hour-step="hstep" minute-step="mstep" show-meridian="ismeridian"></timepicker>
+                     </div>
+                </div>
+                <div class="md-form-group col-sm-12">
             <footer class=" text-center">
               <button type="submit" class="btn btn-success">Ok</button>
               <button type="reset" class="btn btn-danger">Cancel</button>
             </footer> 
+            </div>
           </div>
         </div>
       </form>
@@ -216,4 +225,6 @@ app.controller('Test',function($scope){
         $scope.show = 1;
 
 });
+
+     
     </script>
